# Aerobatic-Planner

./: README.md
Unity/: Depend-ROSTCPConnector.txt  unity_layout.wlt
aerobatic_ws/: .gitignore
aerobatic_ws/src/intention_get_corridor/: CMakeLists.txt  package.xml
aerobatic_ws/src/intention_get_corridor/config/: indoor_params.yaml  indoor_rviz.rviz  outdoor_params.yaml  outdoor_rviz.rviz  unity_params.yaml  unity_rviz.rviz
aerobatic_ws/src/intention_get_corridor/include/intention_get_corridor/: astar.hpp  config.hpp  dilater.hpp  glbmap.hpp  intention_get_corridor.hpp  visualizer.hpp
aerobatic_ws/src/intention_get_corridor/src/: intention_get_corridor_node.cpp
aerobatic_ws/src/traj_actor/fake_drone/src/: poscmd_2_odom.cpp
aerobatic_ws/src/traj_gen_in_corridor/: CMakeLists.txt  package.xml
aerobatic_ws/src/traj_gen_in_corridor/config/: indoor_traj_params.yaml  outdoor_traj_params.yaml  unity_traj_params.yaml
aerobatic_ws/src/traj_gen_in_corridor/data/: quadcopter.dae  quadcopterx.dae
aerobatic_ws/src/traj_gen_in_corridor/include/gcopter/: gcopter.hpp  trajectory.hpp
aerobatic_ws/src/traj_gen_in_corridor/include/gcopter/solver/: flatness.hpp  geoutils.hpp  lbfgs.hpp
aerobatic_ws/src/traj_gen_in_corridor/include/traj_gen_in_corridor/: config.hpp  tictoc.hpp  traj_gen_in_corridor.hpp  visualizer.hpp
aerobatic_ws/src/traj_gen_in_corridor/launch/: indoor.launch  outdoor.launch  unity_sim.launch
aerobatic_ws/src/traj_gen_in_corridor/src/: traj_gen_in_corridor_node.cpp
aerobatic_ws/src/uav_simulator/so3_quadrotor_simulator/: CMakeLists.txt
(+18 files in other folders)
